--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3-svg": "^0.2.2",
     "jsdom": "^19.0.0",
     "next": "12.0.8",
+    "prismjs": "^1.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
